# GCast

./: .gitignore  CONTRIBUTING.md  GCast.sln  LICENSE.md  README.md  build.cake
.github/workflows/: test.yml
src/GCast.App/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs
src/GCast.App/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
src/GCast.App/Views/: MainWindow.axaml  MainWindow.axaml.cs
src/GCast.Protocol/: AssemblyInfo.cs  Class1.cs  GCast.Protocol.csproj
src/GCast.Protocol.Certificates/: CMakeLists.txt  device_certificate.cpp
src/GCast.Protocol/Cert/: AuthCert.cs
src/GCast.Protocol/Discovery/: DiscoveryDevices.cs  Events.cs  Requests.cs
src/GCast.Protocol/Discovery/Args/: DeviceDiscoveredEventArgs.cs
src/GCast.Protocol/Discovery/Config/: DeviceConfigReader.cs
src/GCast.Protocol/Discovery/Models/: DeviceModel.cs  DiscoveryDeviceModel.cs
test/GCast.Protocol.Tests/: GCast.Protocol.Tests.csproj
test/GCast.Protocol.Tests/Cert/: AuthCertTests.cs
test/GCast.Protocol.Tests/Discovery/Config/: DeviceConfigReaderTests.cs
